# assist_pref_study

./: .gitignore  CMakeLists.txt  README.md  assist_pref_pilot_v1.rosinstall  package.xml  setup.py  study_running_options.md
configs/: pilot_v1.yaml
env_data/env_configs/: multi_goal_grasp_demo.yaml  multi_goal_grasp_offsets.yaml  pilot_v1.yaml  pilot_v1_offsets.yaml  pilot_v1_w_boundary.yaml  test.yaml
env_data/gazebo_worlds/: multi_goal_grasp_demo.world  multi_goal_grasp_world  table_env_template.world
env_data/models/kinova_holder/: model.config
env_data/models/kinova_holder/mesh/: nontextured.stl
env_data/models/mug/: model.config  model.sdf
env_data/models/pitcher/: model.config  model.sdf
launch/: multi_goal_grasp_demo.launch  pilot_v1.launch  sim_multi_goal_grasp_demo.launch  study.launch  test.launch
scripts/: run_study_v1.py  trial_data_vis.ipynb
src/assist_pref_grasp_demo/: visualizer.py
src/assist_pref_grasp_demo/data_processing/: rosbag_processer.py
test/: test.py
trial_data/: assistance_init.yaml  joint_states.csv  joy.csv
